...
    final results = _filteredRestaurants;

    return Scaffold(
      backgroundColor: colorScheme.surface,
      appBar: AppBar(
        title: const Text(
          'Ricerca ristoranti',
          style: TextStyle(fontSize: 20, fontWeight: FontWeight.bold),
        ),
        backgroundColor: colorScheme.primary,
        elevation: 0,
        centerTitle: true,
        foregroundColor: colorScheme.onPrimary,
...
